==================== 2.25.3 ======================

2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	* src/trashapplet.c (trash_applet_monitor_changed): set the image from
	the icon directly, now that we have the API to do so.

2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	* src/trashapplet.c: use standard indentation style through-out

2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	* src/trashapplet.c (trash_applet_monitor_changed): remove temporary
	compatibility code

2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	Bug 419501 – Empty wastebasket generates WM_TRANSIENT_FOR window
	manager warning

	* src/trash-empty.c (trash_empty_show_confirmation_dialog): do not
	attempt to set ourselves transient for the root window.  This is a
	violation of the ICCCM.

2008-12-21  Ryan Lortie  <desrt@desrt.ca>

	Bug 564413 – Icon does not scale like launchers do

	* src/trashapplet.c (trash_applet_size_allocate):  set the size of the
	icon in the same way that the panel does for launchers.

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* src/xstuff.h: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-09-24  Callum McKenzie  <callum@spooky-possum.org>

	* src/trashapplet.c (trash_applet_monitor_changed): Don't unref
	the return value of g_file_info_get_icon, it isn't owned by
	us. This should fix 553418 (see also 552577).

2008-09-22  Callum McKenzie  <callum@spooky-possum.org>

	* src/trashapplet.c (trash_applet_monitor_changed): Fix a memory
	leak (Matthias Clasen / bug 552577).

2008-09-02  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_Panel_TrashApplet.server.in.in: Patch from Alexander Jones
	to make sure the trash applet keeps working on a second login. See
	bug #537011.
