@@ -1,3 +1,9 @@
+2009-01-21  Ryan Lortie  <desrt@desrt.ca>
+
+	* trash/trashapplet.c (main): replace a non-libgnome version of the
+	initialisation code that was removed in undocumented commit (revision
+	11202) on Jan 15.  Closes bug #567971.
+
 ==================== 2.25.3 ======================
 
 2008-12-21  Ryan Lortie  <desrt@desrt.ca>
